added music visualizer thumbnail image

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                             <div class = "project-image">
                                 <div class = "intrinsic">
                                     <div class = "content-fill">
-                                        <img class = "" src = "">
+                                        <img class = "" src = "./media/musicthumb.png">
                                     </div>
                                 </div>
                             </div>
