cleaned up other project pages and removed stub pages

--- a/switchblade.html
+++ b/switchblade.html
@@ -4,62 +4,33 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, minimumscale=1.0, maximum-scale=1.0" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<!-- import the Roboto embedded font -->
-        <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-		<!-- import JQuery -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-		<!-- import personal CSS -->
 		<link rel="stylesheet" type="text/css" href="./styles.css" />
-		<!-- add my logo to the tab -->
 		<link rel="shortcut icon" type="image/x-icon" href="media/favicon.ico">
-		<!-- The name that will appear in the tab -->
 		<title>Ryan Bell</title>
 	</head>
 	<body>
-        <header id="header" style="top: 0px;">
-            <div id="logo" data-content-field="site-title">
-                <h1><a href="./index.html">Ryan Bell</a></h1>
-            </div>
-            <div id="topNav" data-content-field="navigation">
-                <nav class="main-nav">
-                    <ul>
-                        <li class="page-collection">
-                                <a href="./about.html"><b>About</b></a>
-                        </li>
-                        <li class="page-collection">          
-                                <a href="./resume.pdf"><b>Resume</b></a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-        </header>
-    	<main>
-            <div class = "project-page">
-                <div class = "project-meta">
-                    <h2>SwitchBlade</h2>
-                    <div class = "project-description">
-                        <p>I created this game alongside Nelson Scott, Daniel Hawk, and 
-                            Peter Lockhart during my Freshman year at RIT. The gameplay 
-                            consisted of following a sword as it changed hands during battle. 
-                            It was made with C# and featured a custom character creation tool,
-                            four character special abilities, and a procedurally generated map 
-                            and path that used a custom implementation of Perlin noise.  
-                        </p>
-                    </div>
-                </div>
-                <div class = "image-list">
-                    <div class = "image">
-                        <img src = "./media/sbtitlescreen.png">
-                    </div>
-                    <div class = "image">
-                        <img src = "./media/sbloadingscreen.jpg">
-                    </div>
-                    <div class = "image">
-                        <img src = "./media/sbgame.png">
-                    </div>
-                </div>
-            </div>
-            
-    	</main>
+		<h1><a href="./index.html">Ryan Bell</a></h1>
+		<main>
+			<div class = "project-page">
+				<div class = "project-meta">
+					<h2>SwitchBlade</h2>
+					<div class = "project-description">
+						<p>I created this game alongside Nelson Scott, Daniel Hawk, and Peter Lockhart during my Freshman year at RIT. The gameplay consisted of following a sword as it changed hands during battle. It was made with C# and featured a custom character creation tool, four character special abilities, and a procedurally generated map and path that used a custom implementation of Perlin noise.  
+						</p>
+					</div>
+				</div>
+				<div class = "image-list">
+					<div class = "image">
+						<img src = "./media/sbtitlescreen.png">
+					</div>
+					<div class = "image">
+						<img src = "./media/sbloadingscreen.jpg">
+					</div>
+					<div class = "image">
+						<img src = "./media/sbgame.png">
+					</div>
+				</div>
+			</div>
+		</main>
 	</body>
 </html>
