Added shape viewer ice files

--- a/330/index.html
+++ b/330/index.html
@@ -40,6 +40,8 @@
 		<br>
 		<a href="./smiley.html">Smiley ICE</a>
 		<br>
+		<a href="./viewer.html">Shape Viewer ICE</a>
+		<br>
 		<a href="./audio.html">Audio Visualizer</a>
 		<br>
 		<a href="./game.html">Game</a>
