removed old ICEs and updated index page

--- a/330/index.html
+++ b/330/index.html
@@ -34,13 +34,11 @@
 		</div>
 		<h2>About Me</h2>
 		<p>I am a 3rd year at RIT pursuing Game Design and Development and Software Engineering majors. I have a 3D modeling hobby and I am looking to get into to field of path tracers and other physical based rendering applications.</p>
-		<img src="./me.jpg" alt="me" width="200">
+		<img src="./me.jpg" alt="" width="200">
 		<h2>Excercies</h2>
-		<a href="./hello-canvas.html">Hello Canvas</a>
+		<a href="./smiley.html">Smiley</a>
 		<br>
-		<a href="./smiley.html">Smiley ICE</a>
-		<br>
-		<a href="./viewer.html">Shape Viewer ICE</a>
+		<a href="./speed_circles.html">Speed Circles</a>
 		<br>
 		<a href="./audio.html">Audio Visualizer</a>
 		<br>
