--- a/330/speed_circles.html
+++ b/330/speed_circles.html
@@ -4,38 +4,37 @@
 	<meta charset="utf-8" />
 	<title>Speed Circles 1</title>
 	<style type="text/css">
-	body{
-		background: #dddddd;
-		font-family:verdana,tahoma,sans-serif;
-		font-size:.8em;
- 	}
+		body{
+			background: #dddddd;
+			font-family:verdana,tahoma,sans-serif;
+			font-size:.8em;
+		}
 
-	#canvas,#controls{
-		background: #ffffff;
-		cursor: pointer;
-		margin-left: 10px;
-		margin-top: 10px;
-		box-shadow: 3px 3px 6px rgba(0,0,0,0.5);
+		#canvas,#controls{
+			background: #ffffff;
+			cursor: pointer;
+			margin-left: 10px;
+			margin-top: 10px;
+			box-shadow: 3px 3px 6px rgba(0,0,0,0.5);
+			
+			margin-left: 10px;
+			margin-top: 10px;
+			
+		}
 		
-		margin-left: 10px;
-		margin-top: 10px;
+		#controls{
+			padding:5px;
+			width:490px;
+		}
 		
- 	}
- 	
- 	#controls{
- 		padding:5px;
- 		width:490px;
- 	}
- 	
- 	#controls div{
- 		margin-bottom:5px;
- 	}
- 	
- 	#assignment{
- 		margin-left: 10px;
-		margin-top: 10px;
- 	}
-	
+		#controls div{
+			margin-bottom:5px;
+		}
+		
+		#assignment{
+			margin-left: 10px;
+			margin-top: 10px;
+		}
 	</style>
 	
 	<script>
@@ -44,15 +43,14 @@
 		// global variables
 		var canvas,ctx,boxChecked=false,sliderValue=0.5;
 		
-		
 		/* init() is called when the page loads */
 		function init(){
 			canvas = document.querySelector("#canvas");
 			ctx = canvas.getContext("2d");
 			canvas.addEventListener("mousedown", doMousedown);
 			canvas.addEventListener("mousemove", doMousemove);
-			canvas.addEventListener("mouseup", doMouseup);
-			canvas.addEventListener("mouseleave", doMouseleave);
+			canvas.addEventListener("mouseup",   doMouseup);
+			canvas.addEventListener("mouseleave",doMouseleave);
 			setupUI();
 		}
 		
@@ -110,7 +108,8 @@
 		
 		function doMouseup(e){
   			var mouse = getMouse(e);
-  			drawCircle(mouse.x,mouse.y,50,getRandomColor());
+				let alpha = boxChecked ? 0.5 : 1.0;
+  			drawCircle(mouse.x,mouse.y,50,getRandomColor(alpha));
 		}
 		
 		function doMousedown(e){
@@ -152,9 +151,6 @@
 			ctx.clearRect(0, 0, canvas.width, canvas.height);
 		}
 		
-		
-		
-		
 		/* HELPER FUNCTIONS */
 		
 		// adjusts coordinates of mouse over the window, to local mouse coordinates over the canvas
@@ -167,12 +163,11 @@
 		
 		// returns a random color of alpha 1.0
 		// http://paulirish.com/2009/random-hex-color-code-snippets/
-		function getRandomColor(){
+		function getRandomColor(alpha){
    			var red = Math.round(Math.random()*254+1);
    			var green = Math.round(Math.random()*254+1);
    			var blue=Math.round(Math.random()*254+1);
-   			var color='rgb('+red+','+green+','+blue+')';
-   			//	var color='rgba('+red+','+green+','+blue+',0.50)'; // 0.50 alpha
+   			var color='rgba('+red+','+green+','+blue+','+alpha+')'; // 0.50 alpha
    			return color;
 		}
 		
@@ -219,8 +214,6 @@
 	<h2>Homework</h2>
 	<p>1) Enable the checkbox - checking it will cause all of the circles to be drawn at 50% alpha.</p>
 	<p>2) Create an additional variation of this <i>speed circle</i> theme, or on a similar theme such as <i>symmetry</i>. Tell us what the variation is so that we can read it right here: <em>** YOUR DESCRIPTION GOES HERE **</em></p>
-	<p>Check out the Khan Academy examples (written in processing) here: <a href="http://www.khanacademy.org/cs/speed-circles/964929070">Speed Circles</a> & <a href="http://www.khanacademy.org/cs/mouse-interaction-symmetry/1009519497">Symmetry</a></p>
-	<p>Here's our original  <i><a href="speed_circles_1.html">Speed Circles JS</a></i>, and in-class variation example: <i><a href="speed_circles_2.html">Speed Circles JS 2</a></i>.</p>
 </div>
 </body>
 </html>
