--- a/330/paint.html
+++ b/330/paint.html
@@ -17,6 +17,15 @@
          top: 10px;
          box-shadow: 4px 4px 8px rgba(0,0,0,0.5);
       }
+
+			#topCanvas{
+				background: rgba(0,0,0,0);
+				position: absolute;
+				left: 10px;
+				top: 10px;
+				z-index: 1;
+				cursor: pointer;
+			}
       
        #controls {
          position: absolute;
@@ -36,7 +45,7 @@
 	window.onload = init;
 	
 	// GLOBALS
-	var canvas,ctx,dragging=false,lineWidth,strokeStyle, currentTool, fillStyle, origin;
+	var canvas,ctx,dragging=false,lineWidth,strokeStyle, currentTool, fillStyle, origin, topCanvas, topCtx;
 	
 	// CONSTANTS
 	const DEFAULT_LINE_WIDTH = 3;
@@ -56,20 +65,24 @@
 		fillStyle = DEFAULT_FILL_STYLE;
 		currentTool = TOOL_PENCIL;
 		origin = {};
+		topCanvas = document.querySelector('#topCanvas');
+		topCtx = topCanvas.getContext('2d');
 
 		//set initial properties of the graphics context
-		ctx.lineWidth = lineWidth;
-		ctx.strokeStyle = strokeStyle;
-		ctx.lineCap = 'round';
-		ctx.lineJoin = 'round';
+		topCtx.lineWidth = ctx.lineWidth = lineWidth;
+		topCtx.strokeStyle = ctx.strokeStyle = strokeStyle;
+		topCtx.fillStyle = ctx.fillStyle = fillStyle;
+		topCtx.lineCap = ctx.lineCap = 'round';
+		topCtx.lineJoin = ctx.lineJoin = 'round';
+		
 
 		drawGrid(ctx, 'lightgray', 10, 10);
 
 		//Hook up event listeners
-		canvas.onmousedown = doMousedown;
-		canvas.onmousemove = doMousemove;
-		canvas.onmouseup = doMouseup;
-		canvas.onmouseout = doMouseout;
+		topCanvas.onmousedown = doMousedown;
+		topCanvas.onmousemove = doMousemove;
+		topCanvas.onmouseup = doMouseup;
+		topCanvas.onmouseout = doMouseout;
 
 		document.querySelector('#lineWidthChooser').onchange = function(e){
 			lineWidth = e.target.value;
@@ -127,11 +140,14 @@
 				var w = Math.abs(mouse.x - origin.x);
 				var h = Math.abs(mouse.y - origin.y);
 
-				ctx.strokeStyle = strokeStyle;
-				ctx.fillStyle = fillStyle;
-				ctx.lineWidth = lineWidth;
-				ctx.fillRect(x,y,w,h);
-				ctx.strokeRect(x,y,w,h);
+				topCtx.strokeStyle = strokeStyle;
+				topCtx.fillStyle = fillStyle;
+				topCtx.lineWidth = lineWidth;
+
+				clearTopCanvas();
+
+				topCtx.fillRect(x,y,w,h);
+				topCtx.strokeRect(x,y,w,h);
 				break;
 			case TOOL_LINE:
 				break;
@@ -139,13 +155,33 @@
 	}
 	
 	function doMouseup(e) {
+		switch(currentTool){
+			case TOOL_PENCIL:
+				ctx.closePath();
+				break;
+			case TOOL_RECTANGLE:
+			case TOOL_LINE:
+				if(dragging){
+					ctx.drawImage(topCanvas, 0,0);
+					clearTopCanvas();
+				}
+				break;
+		}
 		dragging = false;
-		ctx.closePath();
 	}
 	
 	// if the user drags out of the canvas
 	function doMouseout(e) {
-		console.log(e.type);
+		switch(currentTool){
+			case TOOL_PENCIL:
+				ctx.closePath();
+				break;
+			case TOOL_RECTANGLE:
+			case TOOL_LINE:
+				clearTopCanvas();
+				break;
+		}
+		dragging = false;
 	}
 
 	
@@ -163,6 +199,10 @@
 		var myWindow = window.open(data,windowName,windowOptions);
 		myWindow.resizeTo(canvas.width,canvas.height); // needed so Chrome would display image
 	 }
+
+	function clearTopCanvas(){
+		topCtx.clearRect(0,0,topCtx.canvas.width, topCtx.canvas.height);
+	}
 	
 	
 	// UTILITY FUNCTIONS
