--- a/330/paint.html
+++ b/330/paint.html
@@ -45,7 +45,17 @@
 	window.onload = init;
 	
 	// GLOBALS
-	var canvas,ctx,dragging=false,lineWidth,strokeStyle, currentTool, fillStyle, origin, topCanvas, topCtx, ls;
+	var canvas,
+		ctx,
+		dragging=false,
+		lineWidth,
+		strokeStyle,
+		currentTool,
+		fillStyle,
+		origin,
+		topCanvas,
+		topCtx,
+		ls;
 	
 	// CONSTANTS
 	const DEFAULT_LINE_WIDTH = 3;
@@ -54,6 +64,7 @@
 	const TOOL_PENCIL = "toolPencil";
 	const TOOL_RECTANGLE = "toolRectangle";
 	const TOOL_LINE = "toolLine";
+	const TOOL_CIRCLE = "toolCircle";
 	
 	// FUNCTIONS
 	function init(){
@@ -111,6 +122,7 @@
 				ctx.beginPath();
 				ctx.moveTo(mouse.x, mouse.y);
 				break;
+			case TOOL_CIRCLE:
 			case TOOL_RECTANGLE:
 			case TOOL_LINE:
 				origin.x = mouse.x;
@@ -168,6 +180,18 @@
 				topCtx.lineTo(mouse.x, mouse.y);
 				topCtx.stroke();
 				break;
+			case TOOL_CIRCLE:
+				topCtx.strokeStyle = strokeStyle;
+				topCtx.fillStyle = fillStyle;
+				topCtx.lineWidth = lineWidth;
+
+				clearTopCanvas();
+				var deltax = mouse.x - origin.x;
+				var deltay = mouse.y - origin.y;
+				var r = Math.sqrt(deltax*deltax + deltay*deltay);
+				circle(origin.x, origin.y, r, topCtx, fillStyle, lineWidth);
+				break;
+
 		}
 	}
 	
@@ -194,6 +218,12 @@
 					clearTopCanvas();
 				}
 				break;
+			case TOOL_CIRCLE:
+				if(dragging){
+					ctx.drawImage(topCanvas, 0,0);
+					clearTopCanvas();
+				}
+				break;
 		}
 		dragging = false;
 	}
@@ -205,6 +235,7 @@
 				ctx.closePath();
 				break;
 			case TOOL_RECTANGLE:
+			case TOOL_CIRCLE:
 			case TOOL_LINE:
 				clearTopCanvas();
 				break;
@@ -227,6 +258,15 @@
 		var myWindow = window.open(data,windowName,windowOptions);
 		myWindow.resizeTo(canvas.width,canvas.height); // needed so Chrome would display image
 	 }
+
+	function circle(x, y, r, ctx, c, l){
+		ctx.beginPath();
+		ctx.arc(x,y,r,0,2*Math.PI, false);
+		ctx.fillStyle = c;
+		ctx.fill();
+		ctx.lineWidth = l;
+		ctx.stroke();
+	};
 
 	function clearTopCanvas(){
 		topCtx.clearRect(0,0,topCtx.canvas.width, topCtx.canvas.height);
@@ -299,8 +339,9 @@
 				<option value="toolPencil">Pencil</option>
 				<option value="toolRectangle">Rectangle</option>
 				<option value="toolLine">Line</option>
-    		</select>
-    	</label>
+				<option value="toolCircle">Circle</option>
+			</select>
+		</label>
 
     	<label>Fill Style: 
 			<select id="fillStyleChooser">
