--- a/330/paint.html
+++ b/330/paint.html
@@ -55,6 +55,7 @@
 		origin,
 		topCanvas,
 		topCtx,
+		gradient,
 		ls;
 	
 	// CONSTANTS
@@ -78,6 +79,9 @@
 		origin = {};
 		topCanvas = document.querySelector('#topCanvas');
 		topCtx = topCanvas.getContext('2d');
+		gradient = ctx.createLinearGradient(0,0,canvas.width, canvas.height);
+		gradient.addColorStop(0, 'red');
+		gradient.addColorStop(1, 'blue');
 
 		//set initial properties of the graphics context
 		topCtx.lineWidth = ctx.lineWidth = lineWidth;
@@ -108,6 +112,8 @@
 		}
 		document.querySelector('#fillStyleChooser').onchange = function(e){
 			fillStyle = e.target.value;
+			if(e.target.value === 'gradient')
+				fillStyle = gradient;
 		}
 	}
 	
@@ -350,6 +356,7 @@
        	<option value="red" >red</option>
        	<option value="yellow">yellow</option>
 				<option value="black">black</option>
+				<option value="gradient">gradient</option>
     	</select>
     	</label>
     	
