center name in header tag

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 		<title>Ryan Bell</title>
 	</head>
 	<body>
-		<h1><a href="./index.html">Ryan Bell</a></h1>
+		<header>
+				<a class="inner" href="./index.html" >RYAN BELL</a>
+		</header>
 		<main>
 			<h3>About Me</h3>
 			<p>I'm a 3rd year, dual-major RIT student pursuing Game Design and Development and Software Engineering. I have a 3D modeling hobby and love music.</p>
