added an about section

--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
 		<header>
 				<a class="inner" href="./index.html" >RYAN BELL</a>
 		</header>
-		<main>
-			<h3>About Me</h3>
+			<div id="about">
+				<div id="console">
+					text<br>
+					answer<br>		
+				</div>
+			</div>
 			<p>I'm a 3rd year, dual-major RIT student pursuing Game Design and Development and Software Engineering. I have a 3D modeling hobby and love music.</p>
 			<h3>Projects</h3>
 			<div id = "projectThumbs">
@@ -132,6 +136,5 @@
 				</div>
 			</div>
 			<h3>Resume</h3>
-		</main>
 	</body>
 </html>
