better fonts and content to about section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" type="text/css" href="./styles.css" />
 		<link rel="shortcut icon" type="image/x-icon" href="media/favicon.ico">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Karla:400,400italic,700,700italic" rel="stylesheet">
 		<title>Ryan Bell</title>
 	</head>
 	<body>
@@ -14,8 +16,22 @@
 		</header>
 			<div id="about">
 				<div id="console">
-					text<br>
-					answer<br>		
+					&gt; Ryan.education<br>
+					&nbsp;&nbsp;=&gt; "Rochester Institute of Technology"<br>		
+					<br>
+					&gt; Ryan.major<br>
+					&nbsp;&nbsp;=&gt; ["Software Engineering", "Game Design and Development"]<br>		
+					<br>
+					&gt; Ryan.graduation<br>
+					&nbsp;&nbsp;=&gt; "May 2019"<br>		
+					<br>
+					&gt; Ryan.interests<br>
+					&nbsp;&nbsp;=&gt; ["3D modeling", "Programming", "Music", "Path Tracers"]<br>		
+
+					<br>
+					&gt; Ryan.links<br>
+					&nbsp;&nbsp;=&gt; ["Github", "Email", "LinkedIn"]<br>		
+					<br>
 				</div>
 			</div>
 			<p>I'm a 3rd year, dual-major RIT student pursuing Game Design and Development and Software Engineering. I have a 3D modeling hobby and love music.</p>
