made links go to webpages, recolored answer text and link text

--- a/index.html
+++ b/index.html
@@ -17,24 +17,23 @@
 			<div id="about">
 				<div id="console">
 					&gt; Ryan.education<br>
-					&nbsp;&nbsp;=&gt; "Rochester Institute of Technology"<br>		
+					<span class="answer">&nbsp;&nbsp;=&gt; "Rochester Institute of Technology"</span><br>	
 					<br>
 					&gt; Ryan.major<br>
-					&nbsp;&nbsp;=&gt; ["Software Engineering", "Game Design and Development"]<br>		
+					<span class="answer">&nbsp;&nbsp;=&gt; ["Software Engineering", "Game Design and Development"]</span><br>		
 					<br>
 					&gt; Ryan.graduation<br>
-					&nbsp;&nbsp;=&gt; "May 2019"<br>		
+					<span class="answer">&nbsp;&nbsp;=&gt; "May 2019"</span><br>
 					<br>
 					&gt; Ryan.interests<br>
-					&nbsp;&nbsp;=&gt; ["3D modeling", "Programming", "Music", "Path Tracers"]<br>		
+					<span class="answer">&nbsp;&nbsp;=&gt; ["3D modeling", "Programming", "Music", "Path Tracers"]</span><br>		
 
 					<br>
 					&gt; Ryan.links<br>
-					&nbsp;&nbsp;=&gt; ["Github", "Email", "LinkedIn"]<br>		
+					<span class="answer">&nbsp;&nbsp;=&gt; ["<a target="_blank" href="https://github.com/Ryan-Bell">Github</a>", "<a target="_blank" href="mailto:rjb1928@rit.edu">Email</a>", "<a target="_blank" href="ryanbellresume.pdf">Resume</a>"]</span><br>		
 					<br>
 				</div>
 			</div>
-			<p>I'm a 3rd year, dual-major RIT student pursuing Game Design and Development and Software Engineering. I have a 3D modeling hobby and love music.</p>
 			<h3>Projects</h3>
 			<div id = "projectThumbs">
 				<div class = "wrapper">
