added responsive styles

--- a/index.html
+++ b/index.html
@@ -51,24 +51,25 @@
 				</div>
 			</div>
 			<div id="work">
-				<p class="tagline">Projects</p>
+				<div class="inner">
+					<p class="tagline">Projects</p>
 
-				<div class="portfolio-thumb portfolio-big">
-					<a href="./minion.html"><img src="./media/minionfront.png"></a> 
-					<p class="description">This is a minion</p>
-				</div>
-
-				<div class="row">
-					<div class="portfolio-thumb">
+					<div class="portfolio-thumb portfolio-big">
 						<a href="./minion.html"><img src="./media/minionfront.png"></a> 
-						<p class="description">This is a minion</p>
+						<p class="description"><b>Minion</b> This is a minion</p>
 					</div>
-					<div class="portfolio-thumb">
-						<a href="./minion.html"><img src="./media/minionfront.png"></a> 
-						<p class="description">This is a minion</p>
+
+					<div class="row">
+						<div class="portfolio-thumb">
+							<a href="./minion.html"><img src="./media/minionfront.png"></a> 
+							<p class="description">This is a minion</p>
+						</div>
+						<div class="portfolio-thumb">
+							<a href="./minion.html"><img src="./media/minionfront.png"></a> 
+							<p class="description">This is a minion</p>
+						</div>
 					</div>
 				</div>
-
 			</div>
 			<footer>
 				<div class="inner">
