adjusted the project pages to fit the same style

--- a/minion.html
+++ b/minion.html
@@ -6,36 +6,25 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" type="text/css" href="./styles.css" />
 		<link rel="shortcut icon" type="image/x-icon" href="media/favicon.ico">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Karla:400,400italic,700,700italic" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Rokkitt|Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700" rel='stylesheet'>
 		<title>Ryan Bell</title>
 	</head>
 	<body>
-		<h1><a href="./index.html">Ryan Bell</a></h1>
-		<main>
-			<div class = "project-page">
-					<div class = "project-meta">
-							<h2>Minion</h2>
-							<div class = "project-description">
-									<p>I modeled, textured, and rigged this minion at the end of my Senior year of High School
-											with Maya, Photoshop, and MentalRay. I then made a coffee mug for the minion that
-											matched the one I own.
-									</p>
-							</div>
-					</div>
-					<div class = "image-list">
-							<div class = "image">
-									<img src = "./media/minionfront.png">
-							</div>
-							<div class = "image">
-									<img src = "./media/finalshading.png">
-							</div>
-							<div class = "image">
-									<img src = "./media/rig.png">
-							</div>
-							<div class = "image">
-									<img src = "./media/mug.png">
-							</div>
-					</div>
+		<header>
+				<a class="inner" href="./index.html" >RYAN BELL</a>
+		</header>
+		<div class = "project-page">
+			<p class="tagline">Minion</p>
+			<p>I modeled, textured, and rigged this minion at the end of my Senior year of High School with Maya, Photoshop, and MentalRay. I then made a coffee mug for the minion that matched the one I own.
+			</p>
+			<div class = "image-list">
+				<img src = "./media/minionfront.png">
+				<img src = "./media/finalshading.png">
+				<img src = "./media/rig.png">
+				<img src = "./media/mug.png">
 			</div>
-		</main>
+		</div>
 	</body>
 </html>
