--- a/switchblade.html
+++ b/switchblade.html
@@ -6,31 +6,26 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" type="text/css" href="./styles.css" />
 		<link rel="shortcut icon" type="image/x-icon" href="media/favicon.ico">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Karla:400,400italic,700,700italic" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Rokkitt|Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700" rel='stylesheet'>
 		<title>Ryan Bell</title>
 	</head>
 	<body>
-		<h1><a href="./index.html">Ryan Bell</a></h1>
-		<main>
-			<div class = "project-page">
-				<div class = "project-meta">
-					<h2>SwitchBlade</h2>
-					<div class = "project-description">
-						<p>I created this game alongside Nelson Scott, Daniel Hawk, and Peter Lockhart during my Freshman year at RIT. The gameplay consisted of following a sword as it changed hands during battle. It was made with C# and featured a custom character creation tool, four character special abilities, and a procedurally generated map and path that used a custom implementation of Perlin noise.  
-						</p>
-					</div>
-				</div>
-				<div class = "image-list">
-					<div class = "image">
-						<img src = "./media/sbtitlescreen.png">
-					</div>
-					<div class = "image">
-						<img src = "./media/sbloadingscreen.jpg">
-					</div>
-					<div class = "image">
-						<img src = "./media/sbgame.png">
-					</div>
-				</div>
+		<header>
+				<a class="inner" href="./index.html" >RYAN BELL</a>
+		</header>
+		<div class = "project-page">
+			<p class="tagline">SwitchBlade</p>
+			<p>I created this game as a group project during my Freshman year at RIT. The gameplay consisted of following a sword as it changed hands during battle. 
+			<br><br>
+			It was made with C# and featured a custom character creation tool, four character special abilities, and a procedurally generated map and path that used a custom implementation of Perlin noise.  
+			</p>
+			<div class = "image-list">
+				<img src = "./media/sbtitlescreen.png">
+				<img src = "./media/sbloadingscreen.jpg">
+				<img src = "./media/sbgame.png">
 			</div>
-		</main>
+		</div>
 	</body>
 </html>
