--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<link rel="shortcut icon" type="image/x-icon" href="media/favicon.ico">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Karla:400,400italic,700,700italic" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Rokkitt|Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700" rel='stylesheet'>
 		<title>Ryan Bell</title>
 	</head>
 	<body>
@@ -55,7 +56,8 @@
 			<div id="work">
 				<div class="inner">
 					<p class="tagline">Projects</p>
-<!--
+
+<!-- Example of a big tile although the image can't be as tall as this one
 					<div class="portfolio-thumb portfolio-big">
 						<a href="./minion.html"><img src="./media/minionfront.png"></a> 
 						<p class="description"><b>Minion</b> This is a minion</p>
